tests/error/comptime/check_dereference_null.bz
// error: dereferencing a null pointer to an object of type 'int32'
// note: while evaluating expression at compile time
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		let p: ?*int32 = null;
		*p;
	});
}
